# cwebsocket

./: CMakeLists.txt  LICENSE  README.md  build_arduino_library.sh  client.html
.github/workflows/: ci.yml
arduino_server/: arduino_server.ino
lib/: aw-base64.h  aw-sha1.h  consume.c  consume.h  continuation.c  continuation.h  frame_builder.c  frame_builder.h  frame_parser.c  frame_parser.h  handshake.c  handshake.h  streaming.c  streaming.h  websocket.c  websocket.h
tests/: CMakeLists.txt  test_base64.c  test_consume_continuation.c  test_continuation_frames.c  test_continuation_invalid_extra.c  test_frame_building.c  test_frame_parsing.c  test_handshake.c  test_ping_pong.c  test_sha1.c  test_streaming.c  test_streaming_close.c  test_streaming_echo.c  test_streaming_invalid.c  test_streaming_invalid_extra.c  test_x86_server_integration.c
x86_server/: main.c  streaming_echo_server.c
